force-app/main/default/objects/Opportunity__c/Opportunity__c.object-meta.xml
<CustomObject>
    <label>Enquiry</label>
    <nameField>
        <displayFormat>ENQ-{000000}</displayFormat>
        <label>Enquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>