force-app/main/default/objects/Opportunity__c/fields/Billing_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Formula__c</fullName>
    <formula>if(LEN(OEM_Customer__r.BillingStreet)&gt;0, OEM_Customer__r.BillingStreet &amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(OEM_Customer__r.BillingCity)&gt;0, &quot; &quot; &amp;OEM_Customer__r.BillingCity &amp; &quot; &quot; , &quot;&quot; ) &amp;
if(LEN(OEM_Customer__r.BillingState)&gt;0, &quot; &quot; &amp; OEM_Customer__r.BillingState &amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(OEM_Customer__r.BillingPostalCode)&gt;0, &quot; &quot; &amp; OEM_Customer__r.BillingPostalCode &amp; &quot; &quot;,&quot; &quot;) &amp; BR() &amp;
If(LEN( OEM_Customer__r.BillingCountry  ) &gt;0,&quot; &quot; &amp; OEM_Customer__r.BillingCountry  ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address Formula</label>
    <type>Text</type>
</CustomField>