force-app/main/default/objects/Opportunity__c/fields/Customer_Asset__c.field-meta.xml
<CustomField>
    <fullName>Customer_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>