force-app/main/default/objects/Opportunity__c/fields/Date_of_Supply__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Supply__c</fullName>
    <label>Date of Supply</label>
    <type>Date</type>
</CustomField>