force-app/main/default/objects/Opportunity__c/fields/Enquiry_Type_Contain_Service__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Type_Contain_Service__c</fullName>
    <formula>INCLUDES(Opportunity_Type__c, &apos;Service&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiry Type Contain Service</label>
    <type>Checkbox</type>
</CustomField>