force-app/main/default/objects/Opportunity__c/fields/ESN_No1__c.field-meta.xml
<CustomField>
    <fullName>ESN_No1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old ESN</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>