force-app/main/default/objects/Opportunity__c/fields/GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN__c</fullName>
    <formula>If(ISBLANK(OEM_Customer__r.GSTIN_No__c),&apos;GSTIN NOT APPLICABLE&apos;, OEM_Customer__r.GSTIN_No__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSTIN</label>
    <type>Text</type>
</CustomField>