force-app/main/default/objects/Opportunity__c/fields/isService__c.field-meta.xml
<CustomField>
    <fullName>isService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Service</label>
    <type>Checkbox</type>
</CustomField>