force-app/main/default/objects/Opportunity__c/fields/LC_Term__c.field-meta.xml
<CustomField>
    <fullName>LC_Term__c</fullName>
    <label>LC Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>