force-app/main/default/objects/Opportunity__c/fields/Next_Opportunity_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Opportunity_Due__c</fullName>
    <label>Next Enquiry Due</label>
    <type>Date</type>
</CustomField>