force-app/main/default/objects/Opportunity__c/fields/Number_Of_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Items__c</fullName>
    <formula>Total_Line_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>