force-app/main/default/objects/Opportunity__c/fields/OEM_Customer__c.field-meta.xml
<CustomField>
    <fullName>OEM_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer/Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>