force-app/main/default/objects/Opportunity__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Branch Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Gurugram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>