force-app/main/default/objects/Opportunity__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <label>Enquiry Close Date</label>
    <type>Date</type>
</CustomField>