force-app/main/default/objects/Opportunity__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Enquiry Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overhaul</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Repower Engine</fullName>
            </value>
            <value>
                <fullName>Replacement Engine</fullName>
            </value>
            <value>
                <fullName>OTO</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Job Work</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>AMC</fullName>
            </value>
            <value>
                <fullName>PSTS-IW [from Service]</fullName>
                <isActive>false</isActive>
                <label>PSTS-IW [from Service]</label>
            </value>
            <value>
                <fullName>PSTS-OOW [from Service]</fullName>
                <isActive>false</isActive>
                <label>PSTS-OOW [from Service]</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>