force-app/main/default/objects/Opportunity__c/fields/PI_Date__c.field-meta.xml
<CustomField>
    <fullName>PI_Date__c</fullName>
    <label>PI Date</label>
    <type>Date</type>
</CustomField>