force-app/main/default/objects/Opportunity__c/fields/PI_Type__c.field-meta.xml
<CustomField>
    <fullName>PI_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>FOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>