force-app/main/default/objects/Opportunity__c/fields/Place_of_supply_formula__c.field-meta.xml
<CustomField>
    <fullName>Place_of_supply_formula__c</fullName>
    <formula>Shipping_State_Province__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Place Of Supply</label>
    <type>Text</type>
</CustomField>