force-app/main/default/objects/Opportunity__c/fields/Quote_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date_Formula__c</fullName>
    <formula>Quote_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Date</label>
    <type>Date</type>
</CustomField>