force-app/main/default/objects/Opportunity__c/fields/Quote_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number_Formula__c</fullName>
    <formula>Quote_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>