force-app/main/default/objects/Opportunity__c/fields/Reason_for_Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Closed_Lost__c</fullName>
    <label>Reason for Closed Lost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>