force-app/main/default/objects/Opportunity__c/fields/Reverse_Charges__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Charges__c</fullName>
    <label>Reverse Charges</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>