force-app/main/default/objects/Opportunity__c/fields/Syncquote__c.field-meta.xml
<CustomField>
    <fullName>Syncquote__c</fullName>
    <label>Syncquote</label>
    <length>18</length>
    <type>Text</type>
</CustomField>