force-app/main/default/objects/Opportunity__c/fields/Term_and_Condition__c.field-meta.xml
<CustomField>
    <fullName>Term_and_Condition__c</fullName>
    <defaultValue>&quot;1. Interest 24% per annum will be charged on all unpaid invoices.&quot;+BR() +
&quot;2. Our responsibility ceases on delivery of materials to carriers.&quot;+BR() +
&quot;3. Goods supplied to order will not be taken back. &quot;+BR() +
&quot;4. Subject to Delhi jurisdiction. &quot;+BR() +
&quot;5. E. &amp; O.E&quot;</defaultValue>
    <label>Term and Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>