force-app/main/default/objects/Opportunity__c/fields/Vehicle_Docket_No__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Docket_No__c</fullName>
    <label>Vehicle/ Docket No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>