force-app/main/default/objects/Opportunity__c/fields/Ware_House__c.field-meta.xml
<CustomField>
    <fullName>Ware_House__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales From</label>
    <referenceTo>Ware_House__c</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>