force-app/main/default/objects/Opportunity__c/validationRules/Enquiry_Enquiry_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Enquiry_Enquiry_Type</fullName>
    <active>true</active>
    <errorConditionFormula>INCLUDES(Opportunity_Type__c  , &apos;Sales&apos;) &amp;&amp; INCLUDES(Opportunity_Type__c  , &apos;Service&apos;)</errorConditionFormula>
    <errorDisplayField>Opportunity_Type__c</errorDisplayField>
    <errorMessage>Only Enquiry will be Sales or Service.</errorMessage>
</ValidationRule>