force-app/main/default/objects/Opportunity__c/validationRules/OpportunituCloseWonSyncRule.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunituCloseWonSyncRule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Stage__c , &quot;Closed Won&quot;) , ISBLANK(Syncquote__c  ) )</errorConditionFormula>
    <errorMessage>Quote Related To Enquiry is not  Synced</errorMessage>
</ValidationRule>