force-app/main/default/objects/Opportunity__c/validationRules/Opportunity_not_close_won_line_item.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_not_close_won_line_item</fullName>
    <active>true</active>
    <description>Opportunity will not close won if total line-item &lt;=0</description>
    <errorConditionFormula>AND( ISPICKVAL( Stage__c , &quot;Closed Won&quot;) , Total_Line_Items__c  &lt;= 0)</errorConditionFormula>
    <errorMessage>Opportunity will not close won if Total line Item is less than 0.</errorMessage>
</ValidationRule>