force-app/main/default/objects/Opportunity__c/validationRules/Prevent_change_Stage_if_Closed_won.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_change_Stage_if_Closed_won</fullName>
    <active>true</active>
    <description>Prevent user to change the Status if it is Closed Won.</description>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE( Stage__c ),&quot;Closed Won&quot;))</errorConditionFormula>
    <errorMessage>Cannot change Enquiry stage if Closed Won.</errorMessage>
</ValidationRule>