force-app/main/default/objects/Opportunity__c/validationRules/Stage_Closed_Lost_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Closed_Lost_Reason_Required</fullName>
    <active>true</active>
    <description>Opportunity Stage is Closed Lost then, Reason for Closed Lost field is required.</description>
    <errorConditionFormula>AND ( 
				ISPICKVAL( Stage__c , &quot;Closed Lost&quot;) ,
				ISBLANK(Reason_for_Closed_Lost__c) )</errorConditionFormula>
    <errorMessage>Reason for Closed Lost field is required because the stage is Closed Lost.</errorMessage>
</ValidationRule>