force-app/main/default/objects/Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Proforma_Invoice__c</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>OEM_Customer__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>Opportunity_Close_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>