force-app/main/default/objects/Opportunity__c/listViews/Enquiry_Close_Lost.listView-meta.xml
<ListView>
    <fullName>Enquiry_Close_Lost</fullName>
    <columns>NAME</columns>
    <columns>OEM_Customer__c</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Ware_House__c</columns>
    <columns>Stage__c</columns>
    <columns>Proforma_Invoice__c</columns>
    <columns>Quote_Number_Formula__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </filters>
    <label>Enquiry Close Lost</label>
</ListView>