force-app/main/default/objects/Opportunity__c/listViews/Enquiry_Close_Won.listView-meta.xml
<ListView>
    <fullName>Enquiry_Close_Won</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Ware_House__c</columns>
    <columns>OEM_Customer__c</columns>
    <columns>Opportunity_Close_Date__c</columns>
    <columns>Proforma_Invoice__c</columns>
    <columns>Quote_Number_Formula__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <label>Enquiry Close Won</label>
</ListView>